--- a/package.json
+++ b/package.json
@@ -1,13 +1,43 @@
 {
   "name": "just-webpack",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Bare minimum boilerplate featuring Webpack, basic EJS templating and Sass styling, all live-reloadable",
+  "scripts": {
+    "serve": "webpack serve --config-name serve",
+    "build": "webpack --config-name build"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/icmx/just-webpack.git"
   },
+  "keywords": [
+    "boilerplate",
+    "minimal",
+    "webpack",
+    "scss",
+    "live-reload"
+  ],
+  "author": "icmx",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/icmx/just-webpack/issues"
   },
-  "homepage": "https://github.com/icmx/just-webpack#readme"
+  "homepage": "https://github.com/icmx/just-webpack#readme",
+  "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.0.1",
+    "cssnano": "^4.1.10",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.0.0-beta.1",
+    "mini-css-extract-plugin": "^1.3.3",
+    "postcss-loader": "^4.1.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.7.2"
+  }
 }
