--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.1",
+    "css-loader": "^5.0.2",
     "cssnano": "^4.1.10",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.0.0-beta.6",
-    "mini-css-extract-plugin": "^1.3.4",
-    "postcss-loader": "^4.2.0",
-    "sass": "^1.32.5",
-    "sass-loader": "^10.1.1",
+    "html-webpack-plugin": "^5.1.0",
+    "mini-css-extract-plugin": "^1.3.6",
+    "postcss-loader": "^5.0.0",
+    "sass": "^1.32.7",
+    "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
-    "webpack": "^5.17.0",
-    "webpack-cli": "^4.4.0",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   }
