--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.2",
-    "cssnano": "^4.1.10",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.1.0",
     "mini-css-extract-plugin": "^1.3.6",
+    "postcss-csso": "^5.0.0",
     "postcss-loader": "^5.0.0",
     "sass": "^1.32.7",
     "sass-loader": "^11.0.1",
