--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
   },
   "homepage": "https://github.com/icmx/just-webpack#readme",
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^8.0.0",
-    "css-loader": "^5.1.1",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^8.1.1",
+    "css-loader": "^5.2.1",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.0",
-    "mini-css-extract-plugin": "^1.3.9",
-    "postcss-csso": "^5.0.0",
-    "postcss-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.4.1",
+    "postcss-csso": "^5.0.1",
+    "postcss-loader": "^5.2.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.24.4",
-    "webpack-cli": "^4.5.0",
+    "webpack": "^5.31.2",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   }
