--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "just-webpack",
-  "version": "0.1.3",
-  "description": "Bare minimum boilerplate featuring Webpack, basic EJS templating and Sass styling, all live-reloadable",
+  "version": "0.1.4",
+  "private": true,
+  "description": "Bare minimum boilerplate featuring Webpack, basic EJS templating and PostCSS styling, all live-reloadable",
   "scripts": {
     "serve": "webpack serve --config-name serve",
     "build": "webpack --config-name build"
@@ -14,7 +15,7 @@
     "boilerplate",
     "minimal",
     "webpack",
-    "scss",
+    "postcss",
     "live-reload"
   ],
   "author": "icmx",
