--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.4.1",
     "postcss-csso": "^5.0.1",
+    "postcss-import": "^14.0.1",
     "postcss-loader": "^5.2.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.31.2",
