--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Bare minimum boilerplate featuring Webpack, basic EJS templating and PostCSS styling, all live-reloadable",
   "scripts": {
     "serve": "webpack serve --config-name serve",
+    "lint": "eslint src",
     "build": "webpack --config-name build"
   },
   "repository": {
@@ -31,6 +32,7 @@
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.1",
+    "eslint": "^7.26.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.4.1",
