--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "just-webpack",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": true,
   "description": "Bare minimum boilerplate featuring Webpack, basic EJS templating and PostCSS styling, all live-reloadable",
   "scripts": {
     "serve": "webpack serve --config-name serve",
+    "pretty": "prettier --write src",
     "lint": "eslint src",
     "build": "webpack --config-name build"
   },
@@ -33,12 +34,14 @@
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.1",
     "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.4.1",
     "postcss-csso": "^5.0.1",
     "postcss-import": "^14.0.1",
     "postcss-loader": "^5.2.0",
+    "prettier": "^2.3.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.31.2",
     "webpack-cli": "^4.6.0",
