--- a/package.json
+++ b/package.json
@@ -27,25 +27,25 @@
   },
   "homepage": "https://github.com/icmx/just-webpack#readme",
   "devDependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/preset-env": "^7.14.1",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.4",
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "copy-webpack-plugin": "^8.1.1",
-    "css-loader": "^5.2.4",
-    "eslint": "^7.26.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "mini-css-extract-plugin": "^1.6.0",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.2.2",
     "postcss-csso": "^5.0.1",
     "postcss-import": "^14.0.2",
-    "postcss-loader": "^5.2.0",
-    "prettier": "^2.3.0",
-    "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "postcss-loader": "^6.1.1",
+    "prettier": "^2.3.2",
+    "webpack": "^5.52.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.1.1",
+    "webpack-merge": "^5.8.0"
   },
   "browserslist": [
     "> 0.5%",
