--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "just-webpack",
   "version": "0.1.9",
   "private": true,
-  "description": "Bare minimum boilerplate featuring Webpack, basic EJS templating and PostCSS styling, all live-reloadable. Code linting and formatting are provided by ESLint and Prettier",
+  "description": "Bare minimum boilerplate featuring Webpack, EJS and PostCSS, all live-reloadable",
   "scripts": {
     "watch": "webpack serve --config-name watch",
-    "pretty": "prettier --write src",
-    "lint": "eslint src",
     "build": "webpack --config-name build"
   },
   "repository": {
@@ -27,21 +25,15 @@
   },
   "homepage": "https://github.com/icmx/just-webpack#readme",
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "postcss-csso": "^6.0.1",
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.0.2",
-    "prettier": "^2.8.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
