--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "cssnano": "^7.0.6",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
-    "postcss-csso": "^6.0.1",
     "postcss-import": "^16.1.0",
     "postcss-loader": "^8.1.1",
     "webpack": "^5.97.1",
